# CG

./: CMakeLists.txt  Makefile  README.md  r.sh
include/GLFW/: glfw3.h
include/GLFWM/: drawable.hpp  enums.hpp  event.hpp  event_handler.hpp  glfwm.hpp
lib/assimp/release/: CMakeCache.txt  DartConfiguration.tcl  Makefile  cmake_install.cmake  cmake_uninstall.cmake
lib/assimp/release/code/: Makefile  cmake_install.cmake
lib/assimp/release/contrib/: Makefile  (+1 more)
lib/glfwm/: CMakeLists.txt
lib/glfwm/include/: window.hpp  window_group.hpp
lib/glfwm/src/: enums.cpp  event.cpp  glfwm.cpp  update_map.cpp  window.cpp  window_group.cpp
lib/glm/: manual.md  readme.md
lib/glm/doc/: man.doxy
res/models/: Low_poly_UFO.mtl  Miami_2525.mtl  Residential Buildings 001.mtl  Residential Buildings 002.mtl  Residential Buildings 003.mtl  Residential Buildings 004.mtl  chalice.mtl  chalice1.mtl  eight.mtl  grass.mtl  oak.mtl  pavement.mtl  road.mtl  sun.mtl
res/shaders/: f_test.glsl
res/test/: Miami_2525.mtl
res/textures/Low_poly_UFO/: Map__7_Normal_Bump.tga
src/: directionalLight.cpp  directionalLight.hpp  directional_light.cpp  directional_light.hpp  enum_to_string.hpp  f_main.glsl  f_test.glsl  good_random.cpp  good_random.hpp  listener_manager.hpp  looper.cpp  looper.hpp  main.cpp  model.hpp  observer.cpp  observer.hpp  shader.cpp  shader.hpp  shaderprogram.cpp  stb_image.h  test.cpp  texture.cpp  texture.hpp  time_effect.cpp  time_effect.hpp  utilities.cpp  utilities.hpp  v_shadow.glsl  v_test.glsl  window.cpp  window.hpp
src/entities/: basic_entities.cpp  basic_entities.hpp  camera.cpp  camera.hpp  min_max_property.hpp  object_properties.cpp  object_properties.hpp
src/event_handling/: input_triggers.hpp  listener_manager.hpp  observer.hpp
src/graphics/: cubemap.hpp  directional_light.cpp  directional_light.hpp  eye_light.cpp  eye_light.hpp
src/graphics/modeling/: chunk.cpp  chunk.hpp  mesh.cpp  mesh.hpp  model.cpp  model.hpp  myCube.h  texture.cpp  texture.hpp  vertex.hpp
src/graphics/shaders/: shader.cpp  shader.hpp  shader_program.h
src/models/: camera.cpp  camera.hpp  min_max_property.cpp  min_max_property.hpp  object_properties.cpp  object_properties.hpp
src/objects/: camera.hpp  object_properties.cpp  object_properties.hpp
src/objects/modeling/: mesh.cpp  mesh.hpp  model.cpp  model.hpp  texture.cpp  texture.hpp
src/shaders/: shader.cpp  shader.hpp  shader_loader.hpp  shader_program.cpp
src/shaders/glsl/: f_shadow.glsl  v_main.glsl
(+40 files in other folders)
